Fix readability of texts in banner

--- a/apps/blog/app/page.module.scss
+++ b/apps/blog/app/page.module.scss
@@ -3,8 +3,6 @@
         position: relative;
         display: flex;
         height: toRem(500px);
-        background-color: #000;
-        color: #fff;
         align-items: flex-end;
         justify-content: center;
 
@@ -29,10 +27,6 @@
             width: clamp(0px, map-get($container-width, "large"), 100%);
             padding: 0 12px 32px;
             z-index: 5;
-
-            a {
-                color: #fff;
-            }
         }
 
         &__title {
